--- a/users/index.html
+++ b/users/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Home</title>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.css" />
         <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.min.css" />
         <link rel="stylesheet" href="bootstrap/css/bootstrap.css" />
@@ -30,6 +31,7 @@
                     </ul>
                     <p id="menu_opener_container"><a href="#" id="menu_opener_link" onclick="openMenu();"><i class="bi-list" id="menu_opener" ></i>menu</a></p>
                 </nav>
+                <input type="text" />
             </div>
             
             <!--Main Body-->
@@ -44,6 +46,29 @@
                     <h2 id="second_section_header">
                         Our future plans
                     </h2>
+                </div>
+
+                <div class="our_team_section">
+                    <h3 id="our_team_header">Our Team</h3>
+                    <div class="content_container">
+                        <div class="content back_end_developer">
+                            <img src="images/605993.jpg" class="developer_image" alt="Front end developer image" />
+                            <h5 class="developer_name" id="front_end">John Doe</h5>
+                            <p class="developer_statement">Roses are red violets are blue</p>
+                        </div>
+                        <div class="content front_end_developer">
+                            <img src="images/605993.jpg" class="developer_image" alt="Front end developer image" />
+                            <h5 class="developer_name" id="front_end">Jane Doe</h5>
+                            <p class="developer_statement">Roses are red violets are blue</p>
+                        </div>
+                        <div class="content graphic_designer">
+                            <img src="images/605993.jpg" class="developer_image" alt="Front end developer image" />
+                            <h5 class="developer_name" id="front_end">John Doe</h5>
+                            <p class="developer_statement">Roses are red violets are blue</p>
+
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
