--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                   <nav role="navigation" class="navBar">
                     <ul class="navMenu" id="navMenu" type="none">
                         <li class="navItem"><a href="index.html" class="navLink  waves-effect waves-orange">Home<hr class="hr_nav"/></a></li>
-                        <li class="navItem"><a href="contactUs.html" class="navLink">Contact us<hr class="hr_nav"/></a></li>
+                        <li class="navItem"><a href="contactUS.html" class="navLink">Contact us<hr class="hr_nav"/></a></li>
                         <li class="navItem"><a href="about.html" class="navLink">About us<hr class="hr_nav"/></a></li>
                     </ul>
                     <p id="menu_opener_container"><a href="#" id="menu_opener_link" onclick="openMenu();"><i class="bi-list" id="menu_opener" ></i>menu</a></p>
